


################################################################
# the local VF2 library assembly (obtained at 1st July 2008)
################################################################

lib_LIBRARIES = libvf2.a


################################################################
# the VF library headers to distribute
################################################################

lib_vf2_HEADERS = \
					vf2/allocpool.h \
					vf2/argedit.h \
					vf2/argloader.h \
					vf2/argraph.h \
					vf2/dict.h \
					vf2/error.h \
					vf2/gene.h \
					vf2/gene_mesh.h \
					vf2/match.h \
					vf2/sd_state.h \
					vf2/state.h \
					vf2/ull_state.h \
					vf2/ull_sub_state.h \
					vf2/vf2_mono_state.h \
					vf2/vf2_state.h \
					vf2/vf2_sub_state.h \
					vf2/vf_mono_state.h \
					vf2/vf_state.h \
					vf2/vf_sub_state.h \
					vf2/xsubgraph.h

# header install directory via dummy lib
lib_vf2dir = $(includedir)/vf2


################################################################
# the VF library objects
################################################################

libvf2_a_SOURCES = \
					$(lib_vf2_HEADERS) \
					vf2/argedit.cc \
					vf2/argloader.cc \
					vf2/argraph.cc \
					vf2/error.cc \
					vf2/gene.cc \
					vf2/gene_mesh.cc \
					vf2/match.cc \
					vf2/sd_state.cc \
					vf2/sortnodes.cc \
					vf2/sortnodes.h \
					vf2/ull_state.cc \
					vf2/ull_sub_state.cc \
					vf2/vf2_mono_state.cc \
					vf2/vf2_state.cc \
					vf2/vf2_sub_state.cc \
					vf2/vf_mono_state.cc \
					vf2/vf_state.cc \
					vf2/vf_sub_state.cc \
					vf2/xsubgraph.cc

################################################################

SUBDIRS = 
